[package]
name = "double-conversion-sys"
version = "0.1.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
edition = "2018"
description = "Bindings for `double-conversion`"
repository = "https://github.com/open-flash/double-conversion"
readme = "./README.md"
keywords = ["float", "format", "javascript", "ecmascript", "ryu"]
license = "BSD-3-Clause"

[dependencies]

[build-dependencies]
bindgen = "0.58.1"
cmake = "0.1.45"
